@@ -3,6 +3,7 @@
 +++++++++++++++++++++++++
 - sTask->schedule now returns the sTaskRun object on success
 - Fix several issues when sTaskRun.data isn't an array (#15, #18)
+- Use configured manager_date_format and manager_time_format for the date/time displayed in the component (#16)
 
 ++ Scheduler 1.0.2-pl
 ++ Released on 2014-05-29
